fix Elements and premium section there is no spacing on top of the first container. shadow is also missing.

--- a/css/gs-custom.css
+++ b/css/gs-custom.css
@@ -16133,7 +16133,7 @@ div.header-dekstop-tablet {
   .element-all-climate-container{
     height: auto;
     padding: 0;
-    margin-bottom: 20px;
+    margin-top: 30px;
   }
 
   .header-rv-protection-info > div:first-child,.header-rv-protection-info > div:last-child{
